--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
